--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -1,3 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta Gurwinder="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My HTML Assignment</title>
+</head>
+<body>
+    
+  <h>My HTML Assignment</h>
+    <main>
+        <m>My Assignment Data</m>
+    </main>
+</body>
+</html>
 
 
 
